<resources>
    <string name="app_name">Namaz Time</string>
    <string name="splash_message">Track Nearby Masjid Namaz Times</string>
    <string name="location_btn">Use Current Location</string>
    <string name="location_skip">Skip</string>
    <string name="save_btn">Save</string>
    <string name="dd_hint">Select</string>

    <string name="select_language">Choose Language</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="urdu">اردو</string>

    <!--    Main Activity Strings-->

    <string name="location_city">Location City</string>
    <string name="now">Now</string>
    <string name="upcoming">Upcoming</string>
    <string name="fajr">Fajr</string>
    <string name="zuhar">Zuhar</string>
    <string name="asar">Asar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="near_by_masjid">Near By Masjid</string>

    <!--    Main Activity Strings-->

    <!--    Menu Strings-->

    <string name="change_language">Change Language</string>
    <string name="rate_app">Rate the app</string>
    <string name="share_app">Share the app</string>
    <string name="our_apps">Our Apps</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_app">About the app</string>

    <!--    Menu Strings-->

    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>

    <!--    Search Activity Strings-->
    <string name="masjids">Masjids</string>


    <!--    Search Activity Strings-->

    <!--    Alarm Screen-->
    <string name="alarm">Alarm</string>
    <string name="title_activity_change_location">Change_Location</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    Location Sceen-->

    <string name="manually_location">Enter Your Location Manually</string>
    <string name="current_location">Use Current Location</string>

    <!--    about app dialogue-->
    <string name="aboutapp_dialog_heading">About Namaz Time</string>
    <string name="aboutapp_dialog_text">Ut placet, inquam tum dicere exorsus est primum igitur, quid malum, sensu iudicari, sed ipsius honestatis decore laudandis, id ne ferae quidem exercitus quid ex ea commodi consequatur? quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut ratione intellegi posse et expedita distinctio nam libero.</string>
    <string name="Got_it">Got it</string>

<!--    Contact Us Screen-->
    <string name="contactus">Contact Us</string>
    <string name="website">Website</string>
    <string name="website_link">www.applligent.com</string>

</resources>