<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/change_language_m"
            android:title="@string/change_language"

            />
        <item
            android:id="@+id/rate_app_m"
            android:title="@string/rate_app"
            />
        <item
            android:id="@+id/share_app_m"
            android:title="@string/share_app"
            />
        <item
            android:id="@+id/our_apps_m"
            android:title="@string/our_apps"
            />
        <item
            android:id="@+id/contact_us_m"
            android:title="@string/contact_us"/>
        <item
            android:id="@+id/about_m"
            android:title="@string/about_app"/>

    </group>

</menu>