<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="@drawable/green_background">

    <TextView
        android:id="@+id/sel_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_language"
        android:textColor="@color/white"
        android:textSize="18sp"

        />
    <LinearLayout
        android:id="@+id/language_btn_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/sel_language"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/english_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_language_btn"
            android:text="@string/english"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:layout_margin="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hindi_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_language_btn"
            android:text="@string/hindi"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:layout_margin="10dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/urdu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_language_btn"
            android:text="@string/urdu"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:layout_margin="10dp"
            />



    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/bottom_img"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        />


</RelativeLayout>