<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="@drawable/green_background">

    <RelativeLayout
        android:id="@+id/relative_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/splash_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/splash_message"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/white_button"
        android:text="@string/location_btn"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/location_skip"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/bottom_img"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        />


</RelativeLayout>