<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/city_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".city_name">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <RelativeLayout
        android:id="@+id/RL_1st_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/green_background">


        <RelativeLayout
            android:id="@+id/RL_mosque_bg"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/bg_masque_2">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:minHeight="?android:attr/actionBarSize"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/masjids"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:id="@+id/relative_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:padding="20dp">


                <TextView
                    android:id="@+id/now_namaz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/now"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/now_namaz_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/now_namaz"
                    android:text="----"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/now_namaz_name2"
                    android:layout_marginTop="20dp"
                    android:text="@string/upcoming"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/upcoming_namaz_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/upcoming"
                    android:text="----"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:text="14"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/full_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date"
                    android:layout_alignParentRight="true"
                    android:text="June 2021"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/islamic_date1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/full_date"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/islamic_fulldate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/islamic_date1"
                    android:layout_alignParentRight="true"
                    android:text="Dul Quida 1440"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </RelativeLayout>


        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/RL_mosque_bg"
            android:layout_marginTop="-40dp">
            <TextView
                android:id="@+id/RV_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/data_found"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/grey"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/masjiddetails_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />


        </androidx.cardview.widget.CardView>



    </RelativeLayout>
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/drop_down_menu"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:hintEnabled="false"-->
<!--            android:layout_marginTop="200dp"-->
<!--            android:padding="10dp">-->

<!--            <AutoCompleteTextView-->
<!--                android:id="@+id/drop_citynames"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/dropdown_bg"-->
<!--                android:hint="Select City"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:layout_marginRight="10dp"-->
<!--                android:padding="14dp"-->
<!--                android:textSize="18sp" />-->


<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <RelativeLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/dropdown_bg"
            >

            <Spinner
                android:id="@+id/CitySpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:focusable="false"
                android:padding="0dp"
                android:prompt="@string/dd_hint" />

        </RelativeLayout>

    </FrameLayout>


<!--    navigation View -->


    <com.google.android.material.navigation.NavigationView
        app:itemTextAppearance="@style/NavDrawerTextStyle"
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/slidemenu"
        android:layout_gravity="start"
        />


</androidx.drawerlayout.widget.DrawerLayout>